# needle-rs

./: .gitignore  ACHIEVEMENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  pyproject.toml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  wasm-demo.yml
crates/needle-c/: Cargo.toml
crates/needle-c/include/: needle.h
crates/needle-c/src/: lib.rs
crates/needle-c/tests/: ffi_smoke.rs
crates/needle-cli/: Cargo.toml
crates/needle-cli/src/: main.rs
crates/needle-core/: Cargo.toml
crates/needle-core/benches/: kernels.rs
crates/needle-core/src/: attn.rs  config.rs  ffn.rs  layers.rs  lib.rs  math.rs  model.rs  norm.rs  ops.rs  quant.rs  rope.rs
crates/needle-core/tests/: parity_tests.rs
crates/needle-infer/: Cargo.toml
crates/needle-infer/src/: constrained.rs  engine.rs  export.rs  lib.rs  safetensors.rs  tokenizer.rs
crates/needle-infer/tests/: constrained_unit.rs  e2e_parity.rs  e2e_vectors.json  functional.rs  real_parity.rs
crates/needle-python/: Cargo.toml
crates/needle-python/src/: lib.rs
crates/needle-wasm/: Cargo.toml
crates/needle-wasm/src/: lib.rs
crates/needle-wasm/tests/: node_e2e.js
docs/: c-ffi.md  hf-model-card.md  wasm-integration.md
examples/browser-demo/: README.md  index.html  serve.sh
examples/cli-quickstart/: README.md  run.sh
examples/dom-editor/: README.md  index.html  package.json
examples/dom-editor/src/: harness.ts  main.ts  model.ts  style.css  tools.ts  worker.ts
examples/python-via-cffi/: README.md  infer.py
tests/: real_vectors.json  vectors.json
tools/: export.py  gen_e2e_vectors.py  gen_real_vectors.py  gen_test_vectors.py
