[workspace]
members = [
    "crates/needle-core",
    "crates/needle-infer",
    "crates/needle-c",
    "crates/needle-wasm",
    "crates/needle-cli",
    "crates/needle-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Abdalrahman Ibrahim"]
license = "MIT"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = "fat"
