[package]
name = "needle-c"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "C ABI shared library for Needle (FFI, Python, Go, Swift, etc.)"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
needle-infer = { path = "../needle-infer" }
needle-core = { path = "../needle-core", features = ["std"] }
