[package]
name = "needle-core"
version.workspace = true
edition.workspace = true
description = "no_std compute kernels for Needle inference (matmul, attention, norm, rope, quant)"

[features]
default = ["simd"]
simd = []       # enables AVX2/NEON intrinsics at compile time
std = []        # opt-in: enables std (for benchmarks/tests only)

[dependencies]
# Pure-Rust math library for no_std (provides exp, sin, cos, sqrt, powf, etc.)
libm = { version = "0.2", default-features = false }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kernels"
harness = false
