[package]
name = "needle-infer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Needle inference engine: tokenizer, KV cache, constrained decoding, SafeTensors loader"

[dependencies]
needle-core = { path = "../needle-core", version = "0.1.0" }

[dev-dependencies]
serde_json = "1"
