[package]
name = "needle-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for Needle (browser, Cloudflare Workers, Node.js)"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # wasm-opt binary from wasm-pack is incompatible with this build environment

[lib]
crate-type = ["cdylib"]

[dependencies]
needle-infer = { path = "../needle-infer" }
needle-core = { path = "../needle-core" }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
